<resources>
    <string name="app_name">Last Mile Connectivity</string>
    <string name="email_id_phone_number">Email Id / Phone number</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_login">User Login</string>
    <string name="user_ride">Your Ride</string>
    <string name="internet_check">Please check your internet connection</string>
    <string name="proceed">Proceed</string>
    <string name="driver">driver</string>
    <string name="user">user</string>
    <string name="account_info">Account Info</string>
    <string name="history">History</string>
    <string name="wallet_status">Wallet Status</string>
    <string name="data_statistics">Data Statistics</string>
    <string name="sign_out">Sign Out</string>
    <string name="driver_name">Driver Name</string>
    <string name="user_image">user profile</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps1">Map</string>
    <string name="book_a_ride">Book a ride</string>
    <string name="cancel">Cancel</string>
    <string name="contact">Contact</string>
    <string name="work_offline">Work Offline</string>
    <string name="data_data_DSD_pics">data/data/DSD/pics</string>
    <string name="offer">Use Jangid wallet and get flat 10% on every booking</string>

    <string-array name="payment_option">
        <item>Jangid wallet </item>
        <item>Cash</item>
    </string-array>
</resources>

