<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.lastmileconnectivity.lastmileconnectivity.activity.DriverHomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar_home_driver" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_account_info"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="@dimen/margin15dp"
                android:contentDescription="@string/account_info"
                android:src="@drawable/account" />

            <ImageView
                android:id="@+id/iv_history"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="@dimen/margin15dp"
                android:contentDescription="@string/history"
                android:src="@drawable/history" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_wallet_status"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="@dimen/margin15dp"
                android:contentDescription="@string/wallet_status"
                android:src="@drawable/wallet" />

            <ImageView
                android:id="@+id/iv_data_statistics"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="@dimen/margin15dp"
                android:contentDescription="@string/data_statistics"
                android:src="@drawable/graph" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
