<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:descendantFocusability="beforeDescendants"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/intro_background"
    tools:context=".activity.SignUpActivity">

    <com.example.lastmileconnectivity.lastmileconnectivity.util.AspectRatioImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:alpha="0.8"
        android:background="@color/intro_background"
        android:src="@mipmap/ic_launcher" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:clickable="false"
        android:focusable="false"
        android:layout_marginTop="@dimen/margin20dp"
        android:layout_height="wrap_content">
        <include layout="@layout/toolbar_login" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <ImageView
            android:id="@+id/iv_driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/chat_img"
            android:layout_margin="@dimen/margin15dp"
            android:contentDescription="@string/driver"/>
        <ImageView
            android:id="@+id/iv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/chat_img"
            android:layout_margin="@dimen/margin15dp"
            android:contentDescription="@string/user"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/margin100dp"
        android:isScrollContainer="true"
        android:layout_marginLeft="@dimen/margin17dp"
        android:layout_marginRight="@dimen/margin17dp"
        android:visibility="gone"
        android:animateLayoutChanges="true">

        <RelativeLayout
            android:id="@+id/rl_user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/et_user_id"
                style="@style/CustomEditText"
                android:background="@drawable/edit_text_white_custom"
                android:layout_alignBottom="@+id/iv_user_id"
                android:layout_alignTop="@+id/iv_user_id"
                android:layout_centerVertical="true"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@._"
                android:hint="Phone number / Email Id "
                android:paddingLeft="@dimen/padding40dp"
                android:inputType="textVisiblePassword"
                android:paddingRight="@dimen/padding40dp"
                android:text=""
                android:imeOptions="actionNext"
                android:textColor="@color/fontPrimary80"
                android:textColorHint="@color/fontPrimary40"
                android:textSize="@dimen/font17dp" />

            <ImageView
                android:id="@+id/iv_user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingBottom="@dimen/padding12dp"
                android:paddingLeft="@dimen/padding15dp"
                android:paddingRight="@dimen/padding15dp"
                android:paddingTop="@dimen/padding12dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/user" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_user_id"
            android:layout_marginTop="@dimen/margin16dp">


            <EditText
                android:id="@+id/et_user_password"
                style="@style/CustomEditText"
                android:background="@drawable/edit_text_white_custom"
                android:layout_alignBottom="@+id/iv_user_password"
                android:layout_alignTop="@+id/iv_user_password"
                android:hint="Password"
                android:inputType="textVisiblePassword"
                android:paddingLeft="@dimen/padding40dp"
                android:paddingRight="@dimen/padding50dp"
                android:text=""
                android:imeOptions="actionDone"
                android:textColor="@color/fontPrimary80"
                android:textColorHint="@color/fontPrimary40"
                android:textSize="@dimen/font17dp" />

            <ImageView
                android:id="@+id/iv_user_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingBottom="@dimen/padding12dp"
                android:paddingLeft="@dimen/padding15dp"
                android:paddingRight="@dimen/padding15dp"
                android:paddingTop="@dimen/padding12dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/password" />
        </RelativeLayout>


        <Button
            android:id="@+id/btn_login"
            style="@style/CustomOrangeButton"
            android:layout_below="@+id/rl_user_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin27dp"
            android:paddingBottom="@dimen/padding13dp"
            android:paddingLeft="@dimen/padding70dp"
            android:paddingRight="@dimen/padding70dp"
            android:paddingTop="@dimen/padding13dp"
            android:text="@string/proceed" />
    </RelativeLayout>
</RelativeLayout>